# study-gemm

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.sh
include/: gemm.h  matrix.h  timer.h
src/: gemm.c  matrix.c  timer.c
test/: benchmark_test.c  test.c  verification.c  verification_test.c
